load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_test(
    name = "unittests",
    size = "small",
    srcs = glob([
        "**/*.cpp",
    ]),
    linkstatic = select({
        "//:shared": False,
        "//conditions:default": True,
    }),
    deps = [
        "//:mini-llvm",
        "@googletest//:gtest",
    ],
)
