load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_test(
    name = "unittests",
    size = "small",
    srcs = [
        "ir/BasicBlockTest.cpp",
        "ir/Constant/ArrayConstantTest.cpp",
        "ir/FunctionTest.cpp",
        "ir/Instruction/ASHRTest.cpp",
        "ir/Instruction/AddTest.cpp",
        "ir/Instruction/AllocaTest.cpp",
        "ir/Instruction/AndTest.cpp",
        "ir/Instruction/BrTest.cpp",
        "ir/Instruction/CondBrTest.cpp",
        "ir/Instruction/FAddTest.cpp",
        "ir/Instruction/FCmpTest.cpp",
        "ir/Instruction/FDivTest.cpp",
        "ir/Instruction/FMulTest.cpp",
        "ir/Instruction/FNegTest.cpp",
        "ir/Instruction/FPExtTest.cpp",
        "ir/Instruction/FPTruncTest.cpp",
        "ir/Instruction/FRemTest.cpp",
        "ir/Instruction/FSubTest.cpp",
        "ir/Instruction/GetElementPtrTest.cpp",
        "ir/Instruction/ICmpTest.cpp",
        "ir/Instruction/LSHRTest.cpp",
        "ir/Instruction/LoadTest.cpp",
        "ir/Instruction/MulTest.cpp",
        "ir/Instruction/OrTest.cpp",
        "ir/Instruction/PhiTest.cpp",
        "ir/Instruction/RetTest.cpp",
        "ir/Instruction/SDivTest.cpp",
        "ir/Instruction/SExtTest.cpp",
        "ir/Instruction/SHLTest.cpp",
        "ir/Instruction/SRemTest.cpp",
        "ir/Instruction/SelectTest.cpp",
        "ir/Instruction/StoreTest.cpp",
        "ir/Instruction/SubTest.cpp",
        "ir/Instruction/TruncTest.cpp",
        "ir/Instruction/UDivTest.cpp",
        "ir/Instruction/URemTest.cpp",
        "ir/Instruction/XorTest.cpp",
        "ir/Instruction/ZExtTest.cpp",
        "ir_reader/IRReaderTest.cpp",
        "ir_reader/LexerTest.cpp",
        "ir_reader/ParserTest.cpp",
        "main.cpp",
        "utils/AsciiTest.cpp",
        "utils/BigIntegerTest.cpp",
        "utils/CommandLineParserTest.cpp",
        "utils/PCG32Test.cpp",
        "utils/SequenceOpsTest.cpp",
        "utils/SetOpsTest.cpp",
        "utils/StringJoinerTest.cpp",
        "utils/StringsTest.cpp",
        "utils/UnicodeTest.cpp",
    ],
    linkstatic = select({
        "//:shared": False,
        "//conditions:default": True,
    }),
    deps = [
        "//:mini-llvm",
        "@googletest//:gtest",
    ],
)
