load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

package(default_visibility = ["//visibility:private"])

cc_binary(
    name = "mini-llc",
    srcs = ["main.cpp"],
    linkstatic = select({
        "//:is_shared": False,
        "//conditions:default": True,
    }),
    deps = [
        "//:mini-llvm",
    ],
)
